GNOME Bugzilla – Bug 745476
monitor-manager-kms: a few crash fixes
Last modified: 2015-03-02 17:51:10 UTC
Noticed while investigating bug 745384
Created attachment 298335 [details] [review] monitor-manager-kms: Don't store a list of encoders It's not needed outside of read_current() and current_encoder is totally unused.
Created attachment 298336 [details] [review] monitor-manager-kms: Cope with non-existent connectors and encoders DRM objects like connectors and encoders might change at any time, in particular they might become invalid between drmModeGetResources() and getting the actual objects in which case they'll be NULL. Be defensive against that. Note that, if this happens, we should get another udev event soon which will cause us to update our state.
Created attachment 298337 [details] [review] monitor-manager-kms: Fix a crash getting a crtc-less output's scale
Review of attachment 298335 [details] [review]: happy about this
Review of attachment 298337 [details] [review]: whoooops
Review of attachment 298336 [details] [review]: super dumb but races are also super dumb. the world is terrible and i can't change that so let's accept this and move on with our lives.
Attachment 298335 [details] pushed as 6af48d7 - monitor-manager-kms: Don't store a list of encoders Attachment 298336 [details] pushed as db9645f - monitor-manager-kms: Cope with non-existent connectors and encoders Attachment 298337 [details] pushed as 9c6e6ea - monitor-manager-kms: Fix a crash getting a crtc-less output's scale